
  - Remove option ``--embed-images`` (obsoleted by "image_loading_")
    in Docutils 2.0.

* "latex2e" writer:

  - Change default of use_latex_citations_ setting to True
    in Docutils 1.0.

  - Change default of legacy_column_widths_ setting to False
    in Docutils 1.0.

  - Remove ``use_verbatim_when_possible`` setting
    (use literal_block_env_: verbatim) in Docutils 2.0.

* The default value of the `auto_encode` argument of `core.publish_str()`,
  `core.publish_from_doctree()`, and `core.publish_programmatically()`
  will change to ``False`` in Docutils 0.22.
  The functions will then return a `str` object by default.

* Remove the "rawsource" argument from `nodes.Text.__init__()`
  (deprecated and ignored since Docutils 0.18) in Docutils 2.0.

* Remove the compatibility hacks `nodes.reprunicode` and `nodes.ensure_str()`
  in Docutils 0.21 or later. They are not required with Python 3.x.

* Drop support for `old-format configuration files`_ in Docutils 2.0.

* Remove file ``install.py`` in Docutils 0.21.
  See README.txt__ for alternatives.

  __ README.html#installation

* Move math format conversion from docutils/utils/math (called from
  docutils/writers/_html_base.py) to a transform__.

  __ docs/ref/transforms.html

* Remove the ``--html-writer`` option of the `buildhtml.py`_ application
  (obsoleted by the `"writer" setting`_ since Docutils 0.18)
  in Docutils 2.0.

.. _front end tools: docs/user/tools.html
.. _input encoding:
.. _input_encoding: docs/user/config.html#input-encoding
.. _math_output: docs/user/config.html#math-output
.. _UTF-8 mode: https://docs.python.org/3/library/os.html#utf8-mode
.. _image_loading: docs/user/config.html#image-loading
.. _old-format configuration files:
   docs/user/config.html#old-format-configuration-files
.. _rst2html.py:
.. _rst2html: docs/user/tools.html#rst2html
.. _rst2html4: docs/user/tools.html#rst2html4
.. _rst2html5: docs/user/tools.html#rst2html5