@@ -4,6 +4,9 @@
 
 """
 A do-nothing Writer.
+
+`self.output` will change from ``None`` to the empty string
+in Docutils 0.22.
 """
 
 from docutils import writers
@@ -18,4 +21,5 @@ class Writer(writers.UnfilteredWriter):
     config_section_dependencies = ('writers',)
 
     def translate(self):
+        # output = None   # TODO in 0.22
         pass
